// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: ChannelMessage should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
      },
      false,
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#CBCED1",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        undefined,
        {
          "margin": undefined,
          "marginBottom": undefined,
          "marginEnd": undefined,
          "marginHorizontal": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginStart": undefined,
          "marginTop": undefined,
          "marginVertical": undefined,
        },
        {
          "backgroundColor": undefined,
          "borderRadius": undefined,
          "opacity": 1,
        },
      ]
    }
    testID="in-app-notification-Hey! How are you doing?"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="rocket.cat's avatar"
        accessible={true}
        style={
          [
            {
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            },
            {
              "marginRight": 10,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderRadius={4}
          containerViewRef={"[React.ref]"}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={48}
          nativeViewRef={"[React.ref]"}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/room/rid-1?format=png&size=96",
              },
            ]
          }
          style={
            {
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            }
          }
          transition={null}
          width={48}
        />
      </View>
      <View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 17,
                "fontWeight": "500",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#1F2329",
              },
            ]
          }
        >
          general
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 17,
                "textAlign": "left",
              },
              {
                "color": "#1F2329",
              },
            ]
          }
        >
          Hey! How are you doing?
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        undefined,
        {
          "margin": undefined,
          "marginBottom": undefined,
          "marginEnd": undefined,
          "marginHorizontal": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginStart": undefined,
          "marginTop": undefined,
          "marginVertical": undefined,
        },
        {
          "backgroundColor": undefined,
          "borderRadius": undefined,
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={{}}
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#2F343D",
              "fontSize": 20,
            },
            [
              {
                "lineHeight": 20,
              },
              {
                "marginLeft": 10,
              },
            ],
            {
              "fontFamily": "custom",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: DirectMessage should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
      },
      false,
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#CBCED1",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        undefined,
        {
          "margin": undefined,
          "marginBottom": undefined,
          "marginEnd": undefined,
          "marginHorizontal": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginStart": undefined,
          "marginTop": undefined,
          "marginVertical": undefined,
        },
        {
          "backgroundColor": undefined,
          "borderRadius": undefined,
          "opacity": 1,
        },
      ]
    }
    testID="in-app-notification-Hey! How are you doing?"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="diego.mello's avatar"
        accessible={true}
        style={
          [
            {
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            },
            {
              "marginRight": 10,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderRadius={4}
          containerViewRef={"[React.ref]"}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={48}
          nativeViewRef={"[React.ref]"}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/diego.mello?format=png&size=96",
              },
            ]
          }
          style={
            {
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            }
          }
          transition={null}
          width={48}
        />
      </View>
      <View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 17,
                "fontWeight": "500",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#1F2329",
              },
            ]
          }
        >
          diego.mello
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 17,
                "textAlign": "left",
              },
              {
                "color": "#1F2329",
              },
            ]
          }
        >
          Hey! How are you doing?
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        undefined,
        {
          "margin": undefined,
          "marginBottom": undefined,
          "marginEnd": undefined,
          "marginHorizontal": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginStart": undefined,
          "marginTop": undefined,
          "marginVertical": undefined,
        },
        {
          "backgroundColor": undefined,
          "borderRadius": undefined,
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={{}}
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#2F343D",
              "fontSize": 20,
            },
            [
              {
                "lineHeight": 20,
              },
              {
                "marginLeft": 10,
              },
            ],
            {
              "fontFamily": "custom",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: WithBlackTheme should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
      },
      false,
      {
        "backgroundColor": "#0d0d0d",
        "borderColor": "#1f2329",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        undefined,
        {
          "margin": undefined,
          "marginBottom": undefined,
          "marginEnd": undefined,
          "marginHorizontal": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginStart": undefined,
          "marginTop": undefined,
          "marginVertical": undefined,
        },
        {
          "backgroundColor": undefined,
          "borderRadius": undefined,
          "opacity": 1,
        },
      ]
    }
    testID="in-app-notification-Hey! How are you doing?"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="rocket.cat's avatar"
        accessible={true}
        style={
          [
            {
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            },
            {
              "marginRight": 10,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderRadius={4}
          containerViewRef={"[React.ref]"}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={48}
          nativeViewRef={"[React.ref]"}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/room/rid-1?format=png&size=96",
              },
            ]
          }
          style={
            {
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            }
          }
          transition={null}
          width={48}
        />
      </View>
      <View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 17,
                "fontWeight": "500",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#F2F3F5",
              },
            ]
          }
        >
          general
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 17,
                "textAlign": "left",
              },
              {
                "color": "#F2F3F5",
              },
            ]
          }
        >
          Hey! How are you doing?
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        undefined,
        {
          "margin": undefined,
          "marginBottom": undefined,
          "marginEnd": undefined,
          "marginHorizontal": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginStart": undefined,
          "marginTop": undefined,
          "marginVertical": undefined,
        },
        {
          "backgroundColor": undefined,
          "borderRadius": undefined,
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={{}}
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#E4E7EA",
              "fontSize": 20,
            },
            [
              {
                "lineHeight": 20,
              },
              {
                "marginLeft": 10,
              },
            ],
            {
              "fontFamily": "custom",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: WithDarkTheme should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
      },
      false,
      {
        "backgroundColor": "#262931",
        "borderColor": "#333842",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        undefined,
        {
          "margin": undefined,
          "marginBottom": undefined,
          "marginEnd": undefined,
          "marginHorizontal": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginStart": undefined,
          "marginTop": undefined,
          "marginVertical": undefined,
        },
        {
          "backgroundColor": undefined,
          "borderRadius": undefined,
          "opacity": 1,
        },
      ]
    }
    testID="in-app-notification-Hey! How are you doing?"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="rocket.cat's avatar"
        accessible={true}
        style={
          [
            {
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            },
            {
              "marginRight": 10,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderRadius={4}
          containerViewRef={"[React.ref]"}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={48}
          nativeViewRef={"[React.ref]"}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/room/rid-1?format=png&size=96",
              },
            ]
          }
          style={
            {
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            }
          }
          transition={null}
          width={48}
        />
      </View>
      <View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 17,
                "fontWeight": "500",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#F2F3F5",
              },
            ]
          }
        >
          general
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 17,
                "textAlign": "left",
              },
              {
                "color": "#F2F3F5",
              },
            ]
          }
        >
          Hey! How are you doing?
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        undefined,
        {
          "margin": undefined,
          "marginBottom": undefined,
          "marginEnd": undefined,
          "marginHorizontal": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginStart": undefined,
          "marginTop": undefined,
          "marginVertical": undefined,
        },
        {
          "backgroundColor": undefined,
          "borderRadius": undefined,
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={{}}
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#E4E7EA",
              "fontSize": 20,
            },
            [
              {
                "lineHeight": 20,
              },
              {
                "marginLeft": 10,
              },
            ],
            {
              "fontFamily": "custom",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
